# anime_timer

./: .gitignore  LICENSE  README.md  README_en.md  README_ru.md  index.html  package.json  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.txt  script.js  style.css
app/: main.py
app/static/: index.html  script.js  style.css
